--- a/project/assets/html/AssistantInfo.html
+++ b/project/assets/html/AssistantInfo.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Sorry!</title>
+	<title>Привет!</title>
+	<link rel="stylesheet" href="../css/AssistantInfo.css">
 </head>
 <body>
 	<div class="container">
@@ -15,10 +16,8 @@
 			<li id="function">Взаимодействую с LMS(показываю и открываю курсы)</li>
 			<li id="function">Открываю учебный Teams</li>
 			<li id="function">Показываю электронную зачётку</li>
-			<li id="function"></li>
-			<li id="function"></li>
-			<li id="function"></li>
-			<li id="function"></li>
+			<li id="function">Рассказываю про интернет в университете</li>
+			<li id="function">Рассказываю о себе</li>
 		</ul>
 		<p id="Thanks">Спасибо за использование! Надеюсь, я полезен</p>
 	</div>
