handled voice input errors

--- a/project/assets/html/AssistantInfo.html
+++ b/project/assets/html/AssistantInfo.html
@@ -6,20 +6,22 @@
 	<link rel="stylesheet" href="../css/AssistantInfo.css">
 </head>
 <body>
-	<div class="container">
-		<h1 id="greetings_header">Привет! Я твой виртуальный помощник для личного кабинета</h1>
-		<p>Меня зовут Леонид:) Вот что я могу:</p>
-		<ul id="functions">
-			<li id="function">Показываю расписание</li>
-			<li id="function">Показываю информацию по образовательным программам</li>
-			<li id="function">Показываю учебный план</li>
-			<li id="function">Взаимодействую с LMS(показываю и открываю курсы)</li>
-			<li id="function">Открываю учебный Teams</li>
-			<li id="function">Показываю электронную зачётку</li>
-			<li id="function">Рассказываю про интернет в университете</li>
-			<li id="function">Рассказываю о себе</li>
-		</ul>
-		<p id="Thanks">Спасибо за использование! Надеюсь, я полезен</p>
+	<div class="wrapper">
+		<div class="container">
+			<h1 id="greetings_header">Привет! Я твой виртуальный помощник для личного кабинета</h1>
+			<p>Меня зовут Леонид:) Вот что я могу:</p>
+			<ul id="functions">
+				<li id="function">Показываю расписание</li>
+				<li id="function">Показываю информацию по образовательным программам</li>
+				<li id="function">Показываю учебный план</li>
+				<li id="function">Взаимодействую с LMS(показываю и открываю курсы и домашки)</li>
+				<li id="function">Открываю почту</li>
+				<li id="function">Показываю электронную зачётку</li>
+				<li id="function">Рассказываю про интернет в университете</li>
+				<li id="function">Рассказываю о себе</li>
+			</ul>
+			<p id="Thanks">Спасибо за использование! Надеюсь, я полезен</p>
+		</div>
 	</div>
 </body>
 </html>
